# bsdiff-rs

./: Cargo.toml  README.md
src/: bspatch.rs  errors.rs  lib.rs  rspatch.rs
